--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-17 09:45+0800\n"
+"POT-Creation-Date: 2022-11-19 12:59+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -866,6 +866,9 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
+msgid "Edit Object Process"
+msgstr ""
+
 msgid "Edit in Parameter Table"
 msgstr ""
 
@@ -952,6 +955,12 @@ msgstr "Generic"
 
 msgid "Add Modifier"
 msgstr "Add Modifier"
+
+msgid "Switch to per-object setting mode to edit modifier settings."
+msgstr "Switch to per-object setting mode to edit modifier settings."
+
+msgid "Switch to per-object setting mode to edit object process."
+msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
 msgstr "Deleting the last solid part is not allowed."
@@ -1500,6 +1509,19 @@ msgid "Disable AMS"
 msgstr ""
 
 msgid "Print with the filament mounted on the back of chassis"
+msgstr ""
+
+msgid ""
+"Config which AMS slot should be used for a filament used in the print job"
+msgstr ""
+
+msgid "Filament used in this print job"
+msgstr ""
+
+msgid "AMS slot used for this filament"
+msgstr ""
+
+msgid "Click to select AMS slot manually"
 msgstr ""
 
 msgid "AMS Settings"
@@ -3246,9 +3268,6 @@ msgstr ""
 msgid "Auto-recovery from step loss"
 msgstr ""
 
-msgid "Switch to per-object setting mode to edit modifier settings."
-msgstr "Switch to per-object setting mode to edit modifier settings."
-
 msgid "Global"
 msgstr "Global"
 
@@ -3658,6 +3677,10 @@ msgstr "Volume: %1% mm³\n"
 #, boost-format
 msgid "Triangles: %1%\n"
 msgstr "Triangles: %1%\n"
+
+#, c-format, boost-format
+msgid "Plate %d: %s does not support filament %s (%s).\n"
+msgstr ""
 
 msgid "Switching the language requires application restart.\n"
 msgstr "Switching languages requires the application to restart.\n"
@@ -4120,6 +4143,12 @@ msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
 "selecting the same printer type.\n"
+msgstr ""
+
+msgid ""
+"There are some unknown filaments in the AMS mappings. Please check whether "
+"they are the required filaments. If they are okay, press \"Confirm\" to "
+"start printing."
 msgstr ""
 
 msgid "Preparing print job"
@@ -5331,8 +5360,8 @@ msgid "Layer height cannot exceed nozzle diameter"
 msgstr "Layer height cannot exceed nozzle diameter."
 
 #, c-format, boost-format
-msgid "Plate %d: %s does not support filament %s.\n"
-msgstr "Plate %d: %s does not support filament %s.\n"
+msgid "Plate %d: %s does not support filament %s\n"
+msgstr ""
 
 msgid "Generating skirt & brim"
 msgstr "Generating skirt & brim"
@@ -5804,6 +5833,18 @@ msgstr ""
 msgid ""
 "Add solid infill near sloping surfaces to guarantee the vertical shell "
 "thickness (top+bottom solid layers)"
+msgstr ""
+
+msgid "Internal bridge support thickness"
+msgstr ""
+
+msgid ""
+"When sparse infill density is low, the internal solid infill or internal "
+"bridge may have no archor at the end of line. This cause falling and bad "
+"quality when printing internal solid infill. When enable this feature, loop "
+"paths will be added to the sparse fill of the lower layers for specific "
+"thickness, so that better archor can be provided for internal bridge. 0 "
+"means disable this feature"
 msgstr ""
 
 msgid "Top surface pattern"
@@ -7543,6 +7584,10 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#, c-format, boost-format
+#~ msgid "Plate %d: %s does not support filament %s.\n"
+#~ msgstr "Plate %d: %s does not support filament %s.\n"
 
 #~ msgid "Filament N XX"
 #~ msgstr "Filament N XX"
